testsuite/tests/parser/should_fail/T16999.stderr

T16999.hs:6:5: error: Not a data constructor: ‘->’
